--- a/competition.html
+++ b/competition.html
@@ -64,13 +64,19 @@
           The VEX Robotics competiton is played in teams against different schools. Each year has a different competition, each with different goals and challenges that the team has to overcome when designing the robot. The competitions consist of two different sections: matches and skills matches. The competitions begin with 4-6 matches per team, with randomly assigned teammates. Teams will earn Win Points for earning more points than their opposing two teams, and their ranking is determined by their performance in those matches. Skills matches are divided into driver skills and programming skills, where teams are challenged to earn as many points as they can in a minute with no teammates. After all of the matches are complete, the tournament rounds begin, where the top 16 teams get to form allainces with any of the teams, and the 32 robots compete in a bracket-style tournament until 2 robots remain and become the tournament champions!
           </p>
           <p>
-          The 2021-2022 tournament "Tipping Point" has 3 different game components: Rings, Towers, and the Balance. Teams can score points by placing the rings onto the poles of the towers, moving the towers onto their team's side, and balancing both robots and towers on the balances. This year the teams also have the chance to win additional Win Points in the autonomous periods by scoring a ring on both of their team's colored towers, which can provide an essential advantage to teams.</p>
-          <p>The 2021-2022 <a href="https://content.vexrobotics.com/docs/21-22/tipping-point/2021-VRC-GameManual-2.4.pdf">Game Manual</a> provides a complete outline of the game and point values.</p>
+          The 2022-2023 tournament "Spin Up" has 2 different game components: Discs and Rollers. This is one of the first projectile games in a while and it provides an interesting challenge for the teams. Points are scored by shooting rings into the goal, the opponent missing shots and their rings falling into the lower goal zone, and spinning the rollers to the team color. Additional points can also be earned through horizontal expansion in the last 10 seconds of the match. This poses an interesting challenge to the teams, as unimited horizonal expansion was not allowed in prior competitions.</p>
+          <p>The 2022-2023 <a href="https://content.vexrobotics.com/docs/2022-2023/vrc-spin-up/Game-Manual-01.pdf">Game Manual</a> provides a complete outline of the game and point values.</p>
           </div>
+          
+          <!-- 
+             The 2021-2022 tournament "Tipping Point" has 3 different game components: Rings, Towers, and the Balance. Teams can score points by placing the rings onto the poles of the towers, moving the towers onto their team's side, and balancing both robots and towers on the balances. This year the teams also have the chance to win additional Win Points in the autonomous periods by scoring a ring on both of their team's colored towers, which can provide an essential advantage to teams.</p>
+          <p>The 2021-2022
+            -->
 
       <div><h3 id="colored">Past Competition Release Videos</h3>
         <div class="grid">
         <ul>
+            <li>2022-2023:<a href="https://www.youtube.com/watch?v=wIZgvVDZc2Y&t=2s">Spin Up</a></li>
             <li>2021-2022:<a href="https://www.youtube.com/watch?v=H8XcvADUXTE">Tipping Point</a></li>
             <li>2020-2021:<a href="https://www.youtube.com/watch?v=Hxs0q9UoMDQ">Change Up</a></li>
             <li>2019-2020:<a href="https://www.youtube.com/watch?v=_JVQOiw_OUU">Tower Takeover</a></li>
@@ -87,7 +93,7 @@
             <li>2008-2009:<a href="https://www.youtube.com/watch?v=tjj_rtfZUqc">Elevation</a></li>
           <li>2007-2008:<a href="https://www.roboticseducation.org/vrc-bridge-battle/">Bridge Battle</a></li> </ul>
           
-        <div><h3>2021-2022 Video</h3><iframe width="100%" height="100%" src="https://www.youtube.com/embed/H8XcvADUXTE" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
+        <div><h3>2021-2022 Video</h3><iframe width="100%" height="100%" src="https://www.youtube.com/embed/wIZgvVDZc2Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></div>
       </div>
           </div>
       </div>
