--- a/contact.html
+++ b/contact.html
@@ -59,7 +59,7 @@
         <p>If you have any questions, suggestions, or concerns, please reach out to us and we will be happy to help!</p>
           <p>Any questions can also be directed to <a href="mailto:kevin_good@plsd.us">Mr. Good</a> or <a href="mailto:Herman_Moultrie@plsd.us">Mr. Moultrie</a>, or you can ask in our <a href=https://discord.gg/hqBYrPHxad target=”_blank”>Discord server</a>.</p>
           
-        <div name="contact" class="forms" netlify>
+        <div name="contact" class="forms" method="POST" netlify>
             <form>
                 <div>
                     <label for="firstname">First Name:</label>
