--- a/contact.html
+++ b/contact.html
@@ -59,8 +59,13 @@
         <p>If you have any questions, suggestions, or concerns, please reach out to us and we will be happy to help!</p>
           <p>Any questions can also be directed to <a href="mailto:kevin_good@plsd.us">Mr. Good</a> or <a href="mailto:Herman_Moultrie@plsd.us">Mr. Moultrie</a>, or you can ask in our <a href=https://discord.gg/hqBYrPHxad target=”_blank”>Discord server</a>.</p>
           
+        <script>
+            function submitted(){
+                alert("Your message was submitted!")
+            }  
+        </script>
         <div class="forms">
-            <form name="contact" method="POST" netlify>
+            <form name="contact" method="POST" action="submitted()" netlify>
                 <div>
                     <label for="firstname">First Name:</label>
                     <input type="text" id="firstname" name="firstname">
