--- a/contact.html
+++ b/contact.html
@@ -61,7 +61,7 @@
           
         <script>
             function submitted(){
-                alert("Your message was submitted!")
+                alert("Your message was submitted!");
             }  
         </script>
         <div class="forms">
